# airfn

./: .gitignore  CMakeLists.txt  CMakePresets.json  HANDOFF.md  README.md  physmem.sln
.github/workflows/: build.yml  offsets.yml
airfn/: airfn.vcxproj  main.cpp
airfn/engine/: gnames.cpp  gnames.hpp  gobjects.cpp  gobjects.hpp  ue_types.hpp  uworld.cpp  uworld.hpp
airfn/offsets/: .etag  offsets.h  offsets_manual.hpp  offsets_verified.hpp
api/: xor.h
api/driver/: driver_includes.hpp  driver_shared.hpp  driver_um_lib.cpp  driver_um_lib.hpp  nmi_restoring_assembly.asm
api/proc/: process.hpp
docs/: CHEATOFFSETS.md  DUMPER7.md  ROADMAP.md  UWORLD.md
driver/: driver.vcxproj  main.cpp
driver/intermediate directory/: roseware_driver.sys.recipe
driver/intermediate directory/roseware_driver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  roseware_driver.lastbuildstate
driver/project/: loader_offsets.hpp  offset_resolver.cpp  offset_resolver.hpp  project_api.hpp  project_includes.hpp  project_utility.cpp  project_utility.hpp  windows_structs.hpp
driver/project/communication/: comm_assembly.asm  communication.cpp  communication.hpp  (+3 more)
mapper/: intel_driver.cpp  kdmapper.cpp  main.cpp  mapper.vcxproj  mapper.vcxproj.filters  pdb_offsets.cpp  portable_executable.cpp  service.cpp  utils.cpp
mapper/includes/: intel_driver.hpp  kdmapper.hpp  loader_offsets.hpp  pdb_offsets.hpp  utils.hpp
scripts/: gen_offsets.mjs
(+12 files in other folders)
